🐛 fix overflow bug

--- a/styles/components/hero.scss
+++ b/styles/components/hero.scss
@@ -56,7 +56,7 @@
 .title__wrapper {
   overflow: hidden;
   text-align: left;
-  width: 100%;
+  width: fit-content;
   transition: color 200ms;
   font-weight: 200;
 
